css/passwordReset.css
.passwordResetContainer {
    width: 58%;
    height: 100%;
}

#passwordReset {
    width: 58%;
    height: 9em;
}

.passwordDetails {
    width: 80%;
    height: 2em;
}

.passwordDetails input {
    width: 17em;
}

#performPasswordReset .passwordDetails input {
    float: right;
}

#performPasswordReset .passwordDetails label {
    float: left;
}

#startPasswordReset div:last-child {
    display: grid;
    display: -ms-grid;
}

#btnReset {
    width: 10em;
    float: none;
    margin-left: auto;
    margin-right: auto;
}

